# ackermann_model

./: CMakeLists.txt  package.xml
ackermann_model_navigation/: CMakeLists.txt  package.xml
config/: ackermann_control_params.yaml  joint_control_params.yaml  joint_names_ackermann_model.yaml  rviz_model.rviz
launch/: ackermann_control.launch  control.launch  display.launch  gazebo.launch
scripts/: ackermann_controller
urdf/: ackermann_model.csv  ackermann_model.urdf  ackermann_modelv1.urdf
