<?xml version="1.0"?>
<package>
  <name>ackermann_model</name>
  <version>1.0.3</version>
  <description>
    <p>URDF Description package for ackermann_model</p>
    <p>This package contains configuration data, 3D models and launch files
for ackermann_model robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>gazebo_ros_control</run_depend>

  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>transmission_interface</run_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>ackermann_model_navigation</run_depend>
  <!-->
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>ackermann_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>controller_manager_msgs</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>tf</exec_depend-->

  <export>
    <architecture_independent />
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>